k8s/platform/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dns
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
---
apiVersion: v1
kind: Namespace
metadata:
  name: dns-ui
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
